--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "generate:db": "cd packages/db && bunx prisma generate",
+    "push:db": "cd packages/db && bunx prisma db push",
+    "start:backend": "cd apps/backend && bun run index.ts",
+    "start:ws": "cd apps/ws && bun run index.ts",
+    "start:frontend": "cd apps/frontend && bun start"
   },
   "devDependencies": {
     "prettier": "^3.5.0",
